[Meta] Syntax highlighting for a few plugins

--- a/basicPosition/example.html
+++ b/basicPosition/example.html
@@ -15,6 +15,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->  
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="../lib/rainbow-custom.min.js"></script>
   <script src="jquery.basicPosition.js"></script>
   <style>
     #demo {
@@ -60,7 +61,7 @@
         <div class='twelve'>
           <h2>Usage</h2>
           <pre>
-            <code>
+            <code data-language='javascript'>
 $(element).positionAt({
   position: { x: 'center', y: 'center' },    // Where this element will be positioned 
                                              // (x: 'left', 'right' or 'center'; y: 'top','center','bottom')
