Update to latest imagesloaded

--- a/okCycle/example.html
+++ b/okCycle/example.html
@@ -29,7 +29,7 @@
         <h2>Demonstration</h2>
       </div>
       <section class='eight'>
-        <h3>Fading with Autoplay</h3>
+        <h3>Fading Transition with Autoplay UI</h3>
         <ul id='example-1' class='slideshow'>
           <li data-caption='caption for one'><img src='images/one.png' alt='' /></li>
           <li data-caption='caption for two'><img src='images/two.png' alt='' /></li>
@@ -40,7 +40,8 @@
           <li data-caption=''><img src='images/seven.png' alt='' /></li>
         </ul>
         <p>
-          Stop the autoplay by hovering the slideshow
+          Stop the autoplay by hovering the slideshow. This example (and others) also show
+          the 'caption', 'navigation'(prev/next buttons), 'pagination' and 'currentPage' UI.
         </p>
         <pre>
           <code data-language='javascript'>
@@ -53,7 +54,7 @@ $("#example-1").okCycle({
       </section>
 
       <section class='twelve'>
-        <h3>Scrolling with Captions</h3>
+        <h3>Scrolling Transition with Caption UI</h3>
         <div class='eight alpha'>
           <ul id='example-2' class='slideshow'>
             <li data-caption='#html-caption-1'><img src='images/one.png' alt='' /></li>
@@ -64,7 +65,7 @@ $("#example-1").okCycle({
             <li data-caption='#html-caption-6'><img src='images/six.png' alt='' /></li>
             <li data-caption='#html-caption-7'><img src='images/seven.png' alt='' /></li>
           </ul>
-          <p>Try using your mousewheel</p>
+          <p>You can also use your mousewheel on this example</p>
           <pre>
             <code data-language='javascript'>
 $("#example-2").okCycle({
@@ -91,7 +92,7 @@ $("#example-2").okCycle({
       </section>
 
       <section class='eight'>
-        <h3>Sliding with Deferred Loading</h3>
+        <h3>Sliding Transition with Deferred Loading</h3>
         <div id='progress'><div></div></div>
         <ul id='example-3' class='slideshow'>
           <li data-caption='eight'><img src='images/eight.png' alt='' /></li>
@@ -110,11 +111,11 @@ $("#example-2").okCycle({
 $("#example-3").okCycle({
   effect:'slide', 
   loadOnShow: true, 
-  ui: ['caption','navigation','pagination','currentPage'],
-  onProgress: function(data, img){
+  ui: ['navigation','pagination'],
+  onProgress: function(data, image){
     var width = (data.loaded / data.total) * 100;
 
-    $(img).fadeIn();
+    $(image.img).fadeIn();
 
     $("#progress &gt; div").css({width: width + '%'});
   },
@@ -137,8 +138,8 @@ $("#example-3").okCycle({
     </footer>
   </div> <!-- #doc -->
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script src="jquery.imagesloaded.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="imagesloaded.js"></script>
   <!-- Only required for mousewheel functionality -->
   <script src="jquery.mousewheel.js"></script>
   <script src="jquery.okCycle.core.js"></script>
@@ -160,10 +161,10 @@ $("#example-3").okCycle({
       effect:'slide', 
       loadOnShow: true, 
       ui: ['caption','navigation','pagination','currentPage'],
-      onProgress: function(data, img){
+      onProgress: function(data, image){
         var width = (data.loaded / data.total) * 100;
 
-        $(img).fadeIn();
+        $(image.img).fadeIn();
 
         $("#progress > div").css({width: width + '%'});
       },
