[okCycle] Implement responsive transitions. Bump version

--- a/okCycle/example.html
+++ b/okCycle/example.html
@@ -10,6 +10,7 @@
   <meta name="description" content="okcycle - jquery slideshow plugin">
   <meta name="author" content="okbreathe">
   <link href="screen.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="grid_12_responsive.css" rel="stylesheet" type="text/css" media="screen">
   <link href="okCycle.css" rel="stylesheet" type="text/css" media="screen">
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
