Symlink new version of imagesloaded

--- a/okPopup/example.html
+++ b/okPopup/example.html
@@ -16,7 +16,7 @@
   <![endif]-->  
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="../lib/rainbow-custom.min.js"></script>
-  <script src="../lib/jquery.imagesloaded.js"></script>
+  <script src="imagesloaded.min.js"></script>
   <script src="jquery.basicPosition.js"></script>
   <script src="jquery.okPopup.core.js"></script>
   <script src="jquery.okPopup.transitions.js"></script>
