[okTabs] Support hashchange event

--- a/okTabs/example.html
+++ b/okTabs/example.html
@@ -35,7 +35,7 @@
           <li>The tabular content must be contained in a parent element. It doesn't matter the type</li>
         </ol>
 
-        <p>The styling of the tab is up to you. These are just demo styles</p>
+        <p>As with everything else, the styling of the tab is up to you. These are just demo styles</p>
 
         <ul class="tabs">
           <!-- Give href a value corrsponding to a content ID -->
@@ -77,7 +77,7 @@ $(".tabs").okTabs({inEffect:'fadeIn'});</code>
     </footer>
   </div> <!-- #doc -->
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="jquery.okTabs.js"></script>
   <script>
     $(".tabs").okTabs({inEffect:'fadeIn'});
